# tally-connector

./: .env  README.md  config.py  pyproject.toml
.github/workflows/: tauri.yml
tally_agent/: main.py  package-lock.json  package.json  tally_client.py
tally_agent/.antigravitycli/: 59094bb1-1c85-4f26-b66e-9b23490359f1.json
tally_agent/.github/workflows/: tauri.yml
tally_agent/src/: index.html  main.js  styles.css
tally_agent/src-tauri/: Cargo.toml  tauri.conf.json
tally_agent/src-tauri/bundle/linux/: tally_agent.desktop
tally_agent/src-tauri/src/: allow_list.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  tally_client.rs
tests/: test_main.py  test_tally_client.py
